--- a/HTML-CSS-co-ban/Day04/bai-tap-day04/style.css
+++ b/HTML-CSS-co-ban/Day04/bai-tap-day04/style.css
@@ -56,5 +56,5 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    --width-box1: calc(100%/3 - 5px);
+    --width-box1: calc((100% - 20px)/3);
 }
